fix silex constraint

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/http-kernel": "~2.1"
     },
     "require-dev": {
-        "silex/silex": "1.0.*@dev"
+        "silex/silex": "~1.0"
     },
     "autoload": {
         "psr-0": { "Stack": "src" }
