--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/http-foundation": "~2.1",
-        "symfony/http-kernel": "~2.1"
+        "symfony/http-foundation": "~2.1|~3.0.0",
+        "symfony/http-kernel": "~2.1|~3.0.0"
     },
     "require-dev": {
         "silex/silex": "~1.0"
