--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
+        "symfony/contracts": "dev-master",
         "symfony/http-foundation": "~2.1|~3.0|~4.0",
         "symfony/http-kernel": "~2.1|~3.0|~4.0"
     },
