--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/http-kernel": "~2.1|~3.0|~4.0"
     },
     "require-dev": {
-        "silex/silex": "~1.0"
+        "silex/silex": "~1.0",
+        "phpunit/phpunit": "^7.2"
     },
     "autoload": {
         "psr-0": { "Stack": "src" }
