--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: php
 
 php:
-  - 5.3.3
-  - 5.3
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
@@ -19,4 +15,7 @@ script: phpunit --coverage-text
 matrix:
   allow_failures:
     - php: hhvm
+    - php: 5.6
+    - php: 7.0
+    
   fast_finish: true
