--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,9 @@
 language: php
 
 php:
-  - 5.3.3
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - 7.1
   - 7.2
-  - hhvm
+  - 7.3
+  - 7.4
 
 before_script:
   - composer install --no-interaction --prefer-source
@@ -17,6 +11,6 @@ before_script:
 script: phpunit --coverage-text
 
 matrix:
-  allow_failures:
-    - php: hhvm
+  #allow_failures:
+  #  - php: hhvm
   fast_finish: true
