--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,15 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/http-foundation": "~2.1|~3.0|~4.0",
-        "symfony/http-kernel": "~2.1|~3.0|~4.0"
+        "symfony/http-foundation": "~2.1|~3.0|~4.0|~5.0",
+        "symfony/http-kernel": "~2.1|~3.0|~4.0|~5.0"
     },
     "require-dev": {
-        "silex/silex": "~1.0"
+        "silex/silex": "~1.0",
+        "phpunit/phpunit": "~8.0"
+    },
+    "scripts": {
+        "test": "php ./vendor/bin/phpunit --coverage-text"
     },
     "autoload": {
         "psr-0": { "Stack": "src" }
