--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,21 +2,15 @@
 
 <phpunit backupGlobals="false"
          colors="true"
-         bootstrap="vendor/autoload.php"
+         bootstrap="./tests/bootstrap.php"
 >
     <testsuites>
         <testsuite name="unit">
             <directory>./tests/unit/</directory>
         </testsuite>
-    </testsuites>
-
-    <testsuites>
         <testsuite name="integration">
             <directory>./tests/integration/</directory>
         </testsuite>
-    </testsuites>
-
-    <testsuites>
         <testsuite name="functional">
             <directory>./tests/functional/</directory>
         </testsuite>
