Convert all errors to exceptions

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,6 +3,9 @@
 <phpunit backupGlobals="false"
          colors="true"
          bootstrap="./tests/bootstrap.php"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
 >
     <testsuites>
         <testsuite name="unit">
