--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "stack/builder",
-    "description": "Builder for stack middlewares based on HttpKernelInterface.",
+    "description": "Builder for stack middleware based on HttpKernelInterface.",
     "keywords": ["stack"],
     "license": "MIT",
     "authors": [
